simple_web_app/deploy_env_with_secrets.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-deploy-secrets
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-web-secrets
    spec:
      containers:
      - name: hello-container-secrets
        image: yeasy/simple-web:latest
        ports:
        - containerPort: 80
        livenessProbe:				#healthcheck
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 30
