simple_web_app/svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: hello-svc
  labels:
    app: hello-web-svc          #just a service label
spec:
  type: LoadBalancer
  ports:
  - port: 80			#port in container
    nodePort: 30003
    protocol: TCP
  selector:
    app: hello-web		#name of selector should be same as the labels given to pods
