simple_web_app/svc_env_with_secrets.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-secrets
spec:
  type: NodePort
  ports:
  -  port: 80
     nodePort: 30002
     protocol: TCP
  selector:
    app: hello-web-secrets
