simple_web_app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-web-app-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: c6511a80fdee4daf8108.southeastasia.aksapp.io
    http:  
      paths:
      - backend:
          serviceName: hello-svc
          servicePort: 80
        path: /
